# Testr

./: AGPL3.0  LICENCE  README.md  pyproject.toml
src/testr_testing_project/: __init__.py  internals.py
